# python-project

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  dodo.py  pyproject.toml  setup.cfg
doc_API/: conf.py  index.rst  main.rst
doc_API/_build/doctrees/: index.doctree  (+2 more)
doc_wiki_style/: conf.py  index.rst  interface_model.rst
docs/: .buildinfo  __main__.html  afisha.html  bot.html  database.html  genindex.html  horoscope.html  index.html  interface_model.html  main.html  news.html  objects.inv  parsing.html  participants.html  py-modindex.html  read_db_conf.html  recipe_database.html  recipes.html  recipes_parsing.html  reminder.html  search.html  searchindex.js  shopping_lists.html  stuff.html  weather.html
docs/.doctrees/: api_doc.doctree  index.doctree
docs/_sources/: __main__.rst.txt  afisha.rst.txt  bot.rst.txt  database.rst.txt  horoscope.rst.txt  index.rst.txt  main.rst.txt  news.rst.txt  parsing.rst.txt  problem_statement.rst.txt  read_db_conf.rst.txt  recipe_database.rst.txt  recipes.rst.txt  recipes_parsing.rst.txt  reminder.rst.txt  stuff.rst.txt  weather.rst.txt
docs/generator/: conf.py
docs_src/: conf.py  index.rst  main.rst  parsing.rst  reminder.rst  shopping_lists.rst
src/: .recipes.py.swp  .recipes.swp  .recipes_parsing.py.swp  __main__.py  afisha.py  bot.py  bot_info.ini  currencies.py  database.py  db_conf.ini  horoscope.py  index.html  main.py  news.py  parsing.py  read_db_conf.py  recipe_conf.ini  recipe_database.py  recipes.py  recipes_parsing.py  reminder.py  shopping_lists.py  stuff.py  test.py  weather.py
tests/: __init__.py
(+36 files in other folders)
