[metadata]
name = All_in_one
version = 0.0.1
url = https://github.com/Disfavour/python-project
description = Exam project for PythonDevelopment2021 course

[options]
packages = src
include_package_data = True
install_requires =

[options.entry_points]
console_scripts =
    main = src.__main__:main

[options.package_data]
src = */*/telbot.mo
